program/test/files/Error/expr/bool.cps
let numbers: boolean[] = [true];
foreach ( b in numbers) {
    let c : integer = b;
}